--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 
+
 <!DOCTYPE html>
 <html>
 <head>	
@@ -32,6 +33,22 @@
 
 
 	
+#table2 {
+    position: absolute;
+    width: 640px;
+    font-family: 'Inter';
+    left: 25px;
+    top: 800px;
+    border: 1px solid #808080; /* Add the outline */
+font-size: 12px;
+}
+
+#table2 th,
+#table2 td {
+    height: 20px;
+    text-align: center;
+    color: #808080;
+}
 	
   /* Dark Mode Styles */
   body.dark-mode,
@@ -1209,6 +1226,42 @@ font-size: 12px;
 <g class="radarWrapper"></g>
 <g class="radarWrapper2"></g>
 </g>
+
+<table id="table2">
+     <tr>
+            <th></th>
+            <th>Premier League + Championship, Spain, Germany, Italy, France (Top 6) + Netherlands, Portugal (Top 4)</th>
+        </tr>
+        <tr>
+            <th>Goals</th>
+            <th>Goals per 90</th>
+        </tr>
+        <tr>
+            <th>Attacking</th>
+            <th>Shots on target per 90, Touches in box per 90, xG per 90</th>
+        </tr>
+        <tr>
+            <th>Possession</th>
+            <th>Possession %, Positional attacks per 90, Accurate passes per 90, Pass accuracy %, Avg passes per possession</th>
+        </tr>
+
+        <tr>
+            <th>Counter</th>
+            <th>Counter-attacks per 90</th>
+        </tr>
+        <tr>
+            <th>Defending</th>
+            <th>Goals conceded per 90, Shots on target against per 90</th>
+        </tr>
+        <tr>
+            <th>Physicality</th>
+            <th>Duels won %, Aerial duels won %</th>
+        </tr>
+        <tr>
+            <th>Pressing</th>
+            <th>PPDA (Passes per defensive action)</th>
+        </tr>
+    </table>
 
 
 	 <img src="https://i.imgur.com/UurMbGS.png" alt="Logo">
