--- a/index.html
+++ b/index.html
@@ -1159,6 +1159,10 @@ font-size: 12px;
 
 
  <script src="https://cdnjs.cloudflare.com/ajax/libs/dom-to-image/2.6.0/dom-to-image.min.js"></script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7677714701428206"
+     crossorigin="anonymous"></script>
+	
 </head>
 
   <div id="parent-container">
