--- a/index.html
+++ b/index.html
@@ -1557,7 +1557,7 @@ font-size: 12px;
           </tr>
       </table>
   
-     <img src="https://i.imgur.com/UurMbGS.png" alt="Logo">
+     <img src="https://datamb.football/logo.png" alt="Logo">
   
   <script>
   
