--- a/index.html
+++ b/index.html
@@ -1246,6 +1246,8 @@ td {
   }
   th {
     font-weight: normal;
+	      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
   }
 
 
@@ -1522,8 +1524,7 @@ font-size: 12px;
   
   <table id="table2">
 <tr>
-            <th></th>
-            <th></th>
+           
         </tr>
         <tr>
               <th>Goals</th>
