--- a/index.html
+++ b/index.html
@@ -1560,130 +1560,7 @@ font-size: 12px;
   
   
   
-
-    const xhr2 = new XMLHttpRequest();
-    xhr2.open('GET', 'https://datamb.football/data/team/radar.csv', false); // false for synchronous request
-    xhr2.send(null);
-    
-
-        const inputLines = xhr2.responseText;
-    const outputLines = [];
-
-// Split input into lines
-const lines = inputLines.trim().split('\n');
-
-// Process each line
-for (const line of lines) {
-  // Split the line by comma
-  const parts = line.split(',');
-
-  // Extract the desired fields
-  const name = parts[1];
-  const age = parts[3];
-  const club = parts[2];
-
-  // Create the formatted string
-  const outputLine = `${name},${age},${club}`;
-
-  // Add the formatted string to the output array
-  outputLines.push(outputLine);
-}
-
-    const names = outputLines;
-const searchInput = document.getElementById("searchInput1");
-   const matchingNamesContainer = document.getElementById("matchingNames");
-  const searchButton = document.getElementById("searchButton");
-  
-  
-  function isMobileDevice() {
-    const userAgent = navigator.userAgent;
-    return /Android|iPhone/i.test(userAgent);
-  }
-  
-  function updateMatchingNames() {
-    const searchQuery = removeSpecialChars(searchInput.value.toLowerCase());
-    const matchingNames = names.filter(function(name) {
-      const [fullName] = name.split(",");
-      const normalizedName = removeSpecialChars(fullName.toLowerCase());
-      return normalizedName.includes(searchQuery);
-    });
-  
-    matchingNamesContainer.innerHTML = "";
-  
-    matchingNames.forEach(function(name) {
-      const [fullName, team, age] = name.split(",");
-  
-      const nameElement = document.createElement("div");
-      nameElement.classList.add("name");
-  
-      const fullNameElement = document.createElement("span");
-      fullNameElement.textContent = fullName;
-      fullNameElement.classList.add("fullName");
-      nameElement.appendChild(fullNameElement);
-  
-      const ageElement = document.createElement("span");
-      ageElement.textContent = " (" + team + ",";
-      ageElement.classList.add("age");
-      nameElement.appendChild(ageElement);
-  
-      const teamElement = document.createElement("span");
-      teamElement.textContent = " " + age + ")";
-      teamElement.classList.add("team");
-      nameElement.appendChild(teamElement);
-  
-          nameElement.addEventListener("click", function(event) {
-        const clickedElement = event.target.closest(".name");
-        if (clickedElement) {
-          const fullName = clickedElement.querySelector(".fullName").textContent;
-          const age = clickedElement.querySelector(".age").textContent.trim();
-          const team = clickedElement.querySelector(".team").textContent.trim().replace(/[^a-zA-Z\s]/g, ''); // Remove non-alphanumeric characters
-          const searchQuery = fullName + "," + age.substring(1, age.length - 1) + "," + team;
-      
-          searchInput.value = searchQuery; // Set the full query as the search input value
-          const enterKeyEvent = new KeyboardEvent("keyup", { key: "Enter" });
-          searchInput.dispatchEvent(enterKeyEvent); // Dispatch enter key event
-        }
-      });
-      matchingNamesContainer.appendChild(nameElement);
-    });
-  
-    if (searchQuery === "" && matchingNames.length === 0) {
-      matchingNamesContainer.style.display = "none";
-    } else {
-      matchingNamesContainer.style.display = "block";
-  
-      matchingNamesContainer.style.backgroundColor = "#9c9b9b";
-      matchingNamesContainer.style.width = "384px";
-      matchingNamesContainer.style.padding = "10px";
-      matchingNamesContainer.style.position = "absolute";
-      matchingNamesContainer.style.left = "12px";
-      matchingNamesContainer.style.zIndex = "9999"; // Set a high z-index value
-  
-  
-      // Set different styles for mobile and non-mobile
-      if (isMobileDevice()) {
-        matchingNamesContainer.style.top = "5.6%";
-      } else {
-        matchingNamesContainer.style.top = "4.76%";
-      }
-  
-    }
-  
-  
-    if (searchQuery === "") {
-      matchingNamesContainer.style.display = "none";
-    }
-  }
-  
-  searchInput.addEventListener("input", updateMatchingNames);
-  searchInput.addEventListener("keyup", function(event) {
-    if (event.key === "Enter") {
-      searchButton1.click(); // Trigger the search button click event
-    } else if (event.key === "Backspace") {
-      updateMatchingNames();
-    }
-  });
-  
+const _0x47e644=_0x3d6a;(function(_0x422525,_0x250bf6){const _0x1b00e9=_0x3d6a,_0x5ca9dd=_0x422525();while(!![]){try{const _0xc4f0c3=-parseInt(_0x1b00e9(0x21b))/0x1*(-parseInt(_0x1b00e9(0x21f))/0x2)+-parseInt(_0x1b00e9(0x22e))/0x3*(parseInt(_0x1b00e9(0x228))/0x4)+parseInt(_0x1b00e9(0x229))/0x5+parseInt(_0x1b00e9(0x216))/0x6+parseInt(_0x1b00e9(0x1f9))/0x7+parseInt(_0x1b00e9(0x20b))/0x8*(-parseInt(_0x1b00e9(0x20a))/0x9)+parseInt(_0x1b00e9(0x208))/0xa;if(_0xc4f0c3===_0x250bf6)break;else _0x5ca9dd['push'](_0x5ca9dd['shift']());}catch(_0x278272){_0x5ca9dd['push'](_0x5ca9dd['shift']());}}}(_0xabd2,0xcbc76));const xhr2=new XMLHttpRequest();function _0x3d6a(_0x1bc085,_0x3f3ebe){const _0xabd2ec=_0xabd2();return _0x3d6a=function(_0x3d6a6b,_0x50845c){_0x3d6a6b=_0x3d6a6b-0x1ed;let _0x3480a5=_0xabd2ec[_0x3d6a6b];return _0x3480a5;},_0x3d6a(_0x1bc085,_0x3f3ebe);}xhr2[_0x47e644(0x20f)](_0x47e644(0x221),'https://datamb.football/data/team/radar.csv',![]),xhr2[_0x47e644(0x21c)](null);const inputLines=xhr2['responseText'],outputLines=[],lines=inputLines['trim']()['split']('\x0a');for(const line of lines){const parts=line[_0x47e644(0x21a)](','),name=parts[0x1],age=parts[0x3],club=parts[0x2],outputLine=name+','+age+','+club;outputLines[_0x47e644(0x1ee)](outputLine);}const names=outputLines,searchInput=document[_0x47e644(0x211)](_0x47e644(0x1f4)),matchingNamesContainer=document[_0x47e644(0x211)](_0x47e644(0x225)),searchButton=document[_0x47e644(0x211)](_0x47e644(0x21d));function _0xabd2(){const _0x154d00=['substring','classList','384px','addEventListener','9069wvpIgm','style','push','#9c9b9b','4.76%','div','block','trim','searchInput1','9999','Backspace','span','top','4253900rvVEIM','value','includes','.age','click','appendChild','key','input','.team','fullName','position','keyup','display','createElement','add','4377990Eetygp','.fullName','2871xtrMKB','13672ZXbIxP','textContent','12px','Enter','open','padding','getElementById','left','toLowerCase','length','target','2933940urPYWF','.name','replace','absolute','split','486PRldZf','send','searchButton','none','228nbVsrN','width','GET','team','5.6%','name','matchingNames','forEach','querySelector','1580iPILed','4920205klFBIb'];_0xabd2=function(){return _0x154d00;};return _0xabd2();}function isMobileDevice(){const _0xd80bab=navigator['userAgent'];return/Android|iPhone/i['test'](_0xd80bab);}function updateMatchingNames(){const _0x2dc1d9=_0x47e644,_0xa02bf6=removeSpecialChars(searchInput['value'][_0x2dc1d9(0x213)]()),_0x2538e5=names['filter'](function(_0x309de8){const _0x307a6b=_0x2dc1d9,[_0x3278d1]=_0x309de8[_0x307a6b(0x21a)](','),_0x2dfb99=removeSpecialChars(_0x3278d1[_0x307a6b(0x213)]());return _0x2dfb99[_0x307a6b(0x1fb)](_0xa02bf6);});matchingNamesContainer['innerHTML']='',_0x2538e5[_0x2dc1d9(0x226)](function(_0x4d076a){const _0x425eff=_0x2dc1d9,[_0xed6fe3,_0x507312,_0xbcbb78]=_0x4d076a[_0x425eff(0x21a)](','),_0x394a6b=document['createElement'](_0x425eff(0x1f1));_0x394a6b[_0x425eff(0x22b)]['add'](_0x425eff(0x224));const _0x249826=document[_0x425eff(0x206)]('span');_0x249826[_0x425eff(0x20c)]=_0xed6fe3,_0x249826[_0x425eff(0x22b)][_0x425eff(0x207)](_0x425eff(0x202)),_0x394a6b[_0x425eff(0x1fe)](_0x249826);const _0x1f44d4=document['createElement']('span');_0x1f44d4[_0x425eff(0x20c)]='\x20('+_0x507312+',',_0x1f44d4[_0x425eff(0x22b)]['add']('age'),_0x394a6b[_0x425eff(0x1fe)](_0x1f44d4);const _0x1c6425=document[_0x425eff(0x206)](_0x425eff(0x1f7));_0x1c6425['textContent']='\x20'+_0xbcbb78+')',_0x1c6425['classList'][_0x425eff(0x207)](_0x425eff(0x222)),_0x394a6b[_0x425eff(0x1fe)](_0x1c6425),_0x394a6b[_0x425eff(0x22d)](_0x425eff(0x1fd),function(_0x129715){const _0x421094=_0x425eff,_0x5706ce=_0x129715[_0x421094(0x215)]['closest'](_0x421094(0x217));if(_0x5706ce){const _0x5814b6=_0x5706ce[_0x421094(0x227)](_0x421094(0x209))[_0x421094(0x20c)],_0x5ab537=_0x5706ce['querySelector'](_0x421094(0x1fc))['textContent'][_0x421094(0x1f3)](),_0x123621=_0x5706ce['querySelector'](_0x421094(0x201))[_0x421094(0x20c)][_0x421094(0x1f3)]()[_0x421094(0x218)](/[^a-zA-Z\s]/g,''),_0x104327=_0x5814b6+','+_0x5ab537[_0x421094(0x22a)](0x1,_0x5ab537[_0x421094(0x214)]-0x1)+','+_0x123621;searchInput[_0x421094(0x1fa)]=_0x104327;const _0x12fc44=new KeyboardEvent(_0x421094(0x204),{'key':_0x421094(0x20e)});searchInput['dispatchEvent'](_0x12fc44);}}),matchingNamesContainer[_0x425eff(0x1fe)](_0x394a6b);}),_0xa02bf6===''&&_0x2538e5[_0x2dc1d9(0x214)]===0x0?matchingNamesContainer['style']['display']=_0x2dc1d9(0x21e):(matchingNamesContainer[_0x2dc1d9(0x1ed)][_0x2dc1d9(0x205)]=_0x2dc1d9(0x1f2),matchingNamesContainer[_0x2dc1d9(0x1ed)]['backgroundColor']=_0x2dc1d9(0x1ef),matchingNamesContainer['style'][_0x2dc1d9(0x220)]=_0x2dc1d9(0x22c),matchingNamesContainer[_0x2dc1d9(0x1ed)][_0x2dc1d9(0x210)]='10px',matchingNamesContainer[_0x2dc1d9(0x1ed)][_0x2dc1d9(0x203)]=_0x2dc1d9(0x219),matchingNamesContainer[_0x2dc1d9(0x1ed)][_0x2dc1d9(0x212)]=_0x2dc1d9(0x20d),matchingNamesContainer['style']['zIndex']=_0x2dc1d9(0x1f5),isMobileDevice()?matchingNamesContainer[_0x2dc1d9(0x1ed)][_0x2dc1d9(0x1f8)]=_0x2dc1d9(0x223):matchingNamesContainer[_0x2dc1d9(0x1ed)][_0x2dc1d9(0x1f8)]=_0x2dc1d9(0x1f0)),_0xa02bf6===''&&(matchingNamesContainer['style'][_0x2dc1d9(0x205)]=_0x2dc1d9(0x21e));}searchInput['addEventListener'](_0x47e644(0x200),updateMatchingNames),searchInput['addEventListener'](_0x47e644(0x204),function(_0x5bb4a4){const _0x15f4ca=_0x47e644;if(_0x5bb4a4[_0x15f4ca(0x1ff)]===_0x15f4ca(0x20e))searchButton1['click']();else _0x5bb4a4['key']===_0x15f4ca(0x1f6)&&updateMatchingNames();});
   </script>
   
   <div class="toggle-container">
